--- a/examples/LXHeadless/build.xml
+++ b/examples/LXHeadless/build.xml
@@ -6,11 +6,14 @@
 			<src path="./src" />
 			<src path="../../src" />
 			<classpath>
-				<pathelement location="../../lib/gson-2.8.0.jar"/>
+				<pathelement location="../../lib/gson-2.8.0.jar" />
+				<pathelement location="../../lib/coremidi4j-0.9.jar" />
 			</classpath>
 			<compilerarg value="-Xlint"/>
 		</javac>
 		<jar jarfile="./bin/LXHeadless.jar" basedir="./bin">
+			<zipgroupfileset dir="../../lib" includes="coremidi4j-0.9.jar" />
+			<zipgroupfileset dir="../../lib" includes="gson-2.8.0.jar" />
 			<manifest>
 				<attribute name="Main-Class" value="heronarts.lx.headless.LXHeadless"/>
 			</manifest>
