--- a/LX/pom.xml
+++ b/LX/pom.xml
@@ -35,6 +35,7 @@
                 <configuration>
                     <compilerArgs>
                         <arg>-Xlint</arg>
+                        <arg>-Xpkginfo:always</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
