--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,9 @@
 					<source>8</source>
 					<bottom>LX library by Mark C. Slee. &copy; 2012-2020</bottom>
 	                <stylesheetfile>build/stylesheet.css</stylesheetfile>
-	                <doctitle>LX API Specification</doctitle>
+	                <doctitle>LX API Specification (${project.version})</doctitle>
+	                <header>LX (${project.version})</header>
+	                <overview>${basedir}/src/main/java/overview.html</overview>
 	                <windowtitle>LX API</windowtitle>
 	                <offlineLinks>
             			<offlineLink>
