--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,7 @@
 				<version>${maven-javadoc-plugin.version}</version>
 				<configuration>
 					<source>8</source>
+					<detectJavaApiLink>false</detectJavaApiLink>
 					<bottom>LX library by Mark C. Slee. &#169; 2012-2021</bottom>
 					<stylesheetfile>build/stylesheet.css</stylesheetfile>
 					<doctitle>LX API Specification (${project.version})</doctitle>
