Add support for OSC query and zeroconf configuration on OSC services

--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,17 @@
 			<artifactId>coremidi4j</artifactId>
 			<version>${coremidi4j.version}</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.jmdns</groupId>
+		    <artifactId>jmdns</artifactId>
+		    <version>3.5.7</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-simple</artifactId>
+		    <version>1.7.36</version>
+		    <scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
