--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,7 @@
 	</scm>
 
 	<properties>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.release>11</maven.compiler.release>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<gson.version>2.8.9</gson.version>
@@ -70,6 +69,11 @@
 		    <artifactId>slf4j-simple</artifactId>
 		    <version>1.7.36</version>
 		    <scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.openjdk.nashorn</groupId>
+		    <artifactId>nashorn-core</artifactId>
+		    <version>15.4</version>
 		</dependency>
 	</dependencies>
 
