--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,7 @@
 					<bottom>LX library by Mark C. Slee. &#169; 2012-2022</bottom>
 					<stylesheetfile>build/stylesheet.css</stylesheetfile>
 					<doctitle>LX API Specification (${project.version})</doctitle>
+					<doclint>all,-missing</doclint>
 					<header>LX (${project.version})</header>
 					<overview>${basedir}/src/main/java/overview.html</overview>
 					<windowtitle>LX API</windowtitle>
