--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,15 @@
 	<build>
 		<plugins>
 			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-javadoc-plugin</artifactId>
+			    <version>3.0.1</version>
+			    <configuration>
+			        <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
+			    </configuration>
+			</plugin>
+
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>${maven-compiler-plugin.version}</version>
