--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,16 @@
 		    <artifactId>slf4j-simple</artifactId>
 		    <version>2.0.7</version>
 		</dependency>
+		<dependency>
+		    <groupId>io.undertow</groupId>
+		    <artifactId>undertow-core</artifactId>
+		    <version>2.3.10.Final</version>
+		</dependency>
+		<dependency>
+		    <groupId>io.undertow</groupId>
+		    <artifactId>undertow-websockets-jsr</artifactId>
+		    <version>2.3.10.Final</version>
+		</dependency>
 	</dependencies>
 
 	<build>
