--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.heronarts</groupId>
 	<artifactId>lx</artifactId>
-	<version>0.4.2-SNAPSHOT</version>
+	<version>0.4.2</version>
 	<packaging>jar</packaging>
 
 	<name>LX</name>
@@ -42,11 +42,11 @@
 		<gson.version>2.10.1</gson.version>
 		<coremidi4j.version>1.6</coremidi4j.version>
 
-		<maven-assembly-plugin.version>3.1.0</maven-assembly-plugin.version>
-		<exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
-		<maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
-		<maven-source-plugin.version>3.0.1</maven-source-plugin.version>
-		<maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
+		<maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
+		<exec-maven-plugin.version>3.1.1</exec-maven-plugin.version>
+		<maven-javadoc-plugin.version>3.6.3</maven-javadoc-plugin.version>
+		<maven-source-plugin.version>3.3.0</maven-source-plugin.version>
+		<maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -63,12 +63,12 @@
 		<dependency>
 		    <groupId>org.jmdns</groupId>
 		    <artifactId>jmdns</artifactId>
-		    <version>3.5.7</version>
+		    <version>3.5.9</version>
 		</dependency>
 		<dependency>
 		    <groupId>org.slf4j</groupId>
 		    <artifactId>slf4j-simple</artifactId>
-		    <version>2.0.7</version>
+		    <version>2.0.12</version>
 		</dependency>
 	</dependencies>
 
@@ -129,7 +129,7 @@
 				<configuration>
 					<source>8</source>
 					<detectJavaApiLink>false</detectJavaApiLink>
-					<bottom>LX library by Mark C. Slee. &#169; 2012-2022</bottom>
+					<bottom>LX library by Mark C. Slee. &#169; 2012-2024</bottom>
 					<stylesheetfile>build/stylesheet.css</stylesheetfile>
 					<doctitle>LX API Specification (${project.version})</doctitle>
 					<doclint>all,-missing</doclint>
@@ -138,7 +138,7 @@
 					<windowtitle>LX API</windowtitle>
 					<offlineLinks>
 						<offlineLink>
-							<url>https://javadoc.io/doc/com.google.code.gson/gson/2.10.1/com.google.gson/</url>
+							<url>https://javadoc.io/doc/com.google.code.gson/gson/${gson.version}/com.google.gson/</url>
 							<location>../../build/gson</location>
 						</offlineLink>
 					</offlineLinks>
