Update URL to Chromatik

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<name>LX</name>
 	<description>Libraries for real-time procedural 3-D lighting animation and control.</description>
-	<url>http://lx.studio</url>
+	<url>https://chromatik.co/</url>
 
 	<licenses>
 		<license>
