Suppress this-escape compiler warnings

--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
 				<version>${maven-compiler-plugin.version}</version>
 				<configuration>
 					<compilerArgs>
-						<arg>-Xlint</arg>
+						<arg>-Xlint:all,-this-escape</arg>
 						<arg>-Xpkginfo:always</arg>
 					</compilerArgs>
 				</configuration>
