--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
 		    <artifactId>slf4j-simple</artifactId>
 		    <version>2.0.16</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.junit.jupiter</groupId>
+		    <artifactId>junit-jupiter</artifactId>
+		    <version>5.10.1</version>
+		    <scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
